# seva

./: CMakeLists.txt  TODO.md  compile.sh  test.sh
.github/workflows/: ci.yml
src/: a.out  abnf.h  htable.c  htable.h  http.c  http.h  main.c  rbuf_test.c  ring_buffer.c  ring_buffer.h  utils.c  utils.h
tests/: htable.c  http.c  utils.c
